[gd_scene load_steps=17 format=2]

[ext_resource path="res://GameContent/QuickScenes/Hitbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://frames/big_demon_idle_anim_f3.png" type="Texture" id=2]
[ext_resource path="res://frames/big_demon_idle_anim_f2.png" type="Texture" id=3]
[ext_resource path="res://frames/big_demon_idle_anim_f0.png" type="Texture" id=4]
[ext_resource path="res://frames/big_demon_idle_anim_f1.png" type="Texture" id=5]
[ext_resource path="res://GameContent/GameObjects/Demon1.gd" type="Script" id=6]
[ext_resource path="res://GameContent/GameObjects/Enemy/EnemtyAI.tscn" type="PackedScene" id=7]
[ext_resource path="res://Monster/big_demon_run_anim_f0.png" type="Texture" id=8]
[ext_resource path="res://Monster/big_demon_run_anim_f1.png" type="Texture" id=9]
[ext_resource path="res://Monster/big_demon_run_anim_f2.png" type="Texture" id=10]
[ext_resource path="res://Monster/big_demon_run_anim_f3.png" type="Texture" id=11]
[ext_resource path="res://GameContent/GameObjects/Enemy/WanderAI.tscn" type="PackedScene" id=12]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "Attack",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 4.24188
height = 4.86072

[sub_resource type="CapsuleShape2D" id=3]
radius = 3.99458
height = 0.0

[sub_resource type="CapsuleShape2D" id=4]
radius = 2.16978
height = 9.19337

[node name="KinematicBody2D" type="KinematicBody2D" groups=[
"Enemy",
]]
script = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "Attack"
frame = 1
playing = true

[node name="Hitbox" parent="." instance=ExtResource( 1 )]
visible = false

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( -0.222977, 1.99336 )
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2.59463 )
shape = SubResource( 3 )

[node name="DemonHitBox" parent="." instance=ExtResource( 1 )]
position = Vector2( 4, 0.83 )

[node name="CollisionShape2D" parent="DemonHitBox" index="0"]
rotation = 1.5708
shape = SubResource( 4 )

[node name="Detection" parent="." instance=ExtResource( 7 )]
collision_layer = 1
collision_mask = 1

[node name="Shape" parent="Detection" index="0"]
modulate = Color( 1, 1, 1, 0.239216 )

[node name="WanderAI" parent="." instance=ExtResource( 12 )]
[connection signal="lootDrop" from="." to="." method="_on_KinematicBody2D_lootDrop"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]

[editable path="Hitbox"]

[editable path="DemonHitBox"]

[editable path="Detection"]

[editable path="WanderAI"]
